// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AsyncContent when fulfilled 1`] = `
<Fragment>
  <h2>
    importantos data
  </h2>
</Fragment>
`;

exports[`Component: AsyncContent when loading 1`] = `
<ContentState
  mode="loading"
  title="Loading..."
/>
`;

exports[`Component: AsyncContent when rejected should not render when showRetryButton is undefined 1`] = `
<ContentState
  mode="error"
  title="Oops something went wrong!"
>
  <Button
    icon="refresh"
    onClick={[Function]}
  >
    Retry
  </Button>
</ContentState>
`;

exports[`Component: AsyncContent when rejected with retry button 1`] = `
<ContentState
  mode="error"
  title="Oops something went wrong!"
>
  <Button
    icon="refresh"
    onClick={[Function]}
  >
    Retry
  </Button>
</ContentState>
`;

exports[`Component: AsyncContent when rejected without retry button 1`] = `
<ContentState
  mode="error"
  title="Oops something went wrong!"
/>
`;
